adding text on images

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,11 +93,25 @@
                 android:layout_height="wrap_content"
                 android:visibility="gone"/>
 
-            <com.rohan.pixd.utils.MoveableForegroundView
+            <com.rohan.pixd.utils.MoveableStickerForegroundView
                 android:id="@+id/moveableForegroundView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone"/>
+
+            <!--<RelativeLayout
+                android:id="@+id/tvCover"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone">-->
+
+                <com.rohan.pixd.utils.xd
+                    android:id="@+id/xdtext"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"/>
+
+            <!--</RelativeLayout>-->
 
         </RelativeLayout>
 
