--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
         android:orientation="vertical">
 
         <RelativeLayout
-            android:id="@+id/zone"
+            android:id="@+id/editzone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +106,7 @@
                 android:visibility="gone">-->
 
                 <com.rohan.pixd.utils.MovableTextviewContainer
-                    android:id="@+id/xdtext"
+                    android:id="@+id/movableTextviewContainer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="gone"/>
@@ -132,6 +132,25 @@
             android:theme="@style/SeekBarStyle"
             android:max="100"
             android:min="-100"
+            android:progress="5" />
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/frameControllerText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
+        android:visibility="gone"
+        android:padding="20dp">
+
+        <SeekBar
+            android:id="@+id/seekBarText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/SeekBarStyle"
+            android:max="100"
+            android:min="5"
             android:progress="5" />
 
     </FrameLayout>
