--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,18 @@
             android:layout_gravity="end">
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/cancelButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="10dp"
+                app:backgroundTint="@color/black"
+                android:background="@drawable/ic_cancel"
+                android:backgroundTint="@color/black"
+                android:layout_marginTop="16dp"
+                android:layout_toLeftOf="@id/loadButton"
+                android:visibility="gone"/>
+
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/applyButton"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
@@ -42,7 +54,7 @@
                 android:backgroundTint="@color/black"
                 android:layout_marginTop="16dp"
                 android:layout_toLeftOf="@id/loadButton"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/loadButton"
