icons, sticker bug fix for first time addition, gitignore

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="skyblue">#10EFCE</color>
     <color name="pink">#EA059E</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="main">#2557ED</color>
 </resources>
